--- a/calendarview/src/main/res/values/attrs.xml
+++ b/calendarview/src/main/res/values/attrs.xml
@@ -5,6 +5,7 @@
         <attr name="calendar_padding" format="dimension" /><!--日历内部左右padding-->
         <attr name="calendar_padding_left" format="dimension" /><!--日历内部左padding-->
         <attr name="calendar_padding_right" format="dimension" /><!--日历内部右padding-->
+        <attr name="calendar_padding_bottom" format="dimension" /><!--日历内部右padding-->
 
 
         <attr name="week_background" format="color" /><!--周背景-->
